test(x11): make display failures and Xvfb blocking